feat: 랜딩 Cta 클릭 시 페이지 전환

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,3 +2,13 @@
   background-color: #0d0402;
   font-family: 'Plus Jakarta Sans';
 }
+
+a {
+  text-decoration: none;
+  outline: none;
+}
+
+a:hover,
+a:active {
+  text-decoration: none;
+}
